--- a/AdminClient/Views/Home/Index.cshtml
+++ b/AdminClient/Views/Home/Index.cshtml
@@ -1,8 +1,52 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model List<AdminClient.Messages.BookingDto>?
+
+@{
+	ViewData["Title"] = "All Bookings";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@if (ViewBag.ApiError != null)
+{
+	<div class="alert alert-warning text-center">
+		@ViewBag.ApiError
+	</div>
+}
+
+<div class="text-center mb-4">
+	<h1 class="display-4">All Bookings</h1>
+	<p>See the current list of customer bookings below.</p>
 </div>
+
+@if (Model != null && Model.Any())
+{
+	<table class="table table-bordered">
+		<thead class="table-light">
+			<tr>
+				<th>Booking ID</th>
+				<th>User ID</th>
+				<th>Table Number</th>
+				<th>Description</th>
+				<th>Event Time</th>
+				<th>Guests</th>
+			</tr>
+		</thead>
+		<tbody>
+			@foreach (var booking in Model)
+			{
+				<tr>
+					<td>@booking.BookingId</td>
+					<td>@booking.UserId</td>
+					<td>@booking.TableNumber</td>
+					<td>@booking.Description</td>
+					<td>@booking.EventTime.ToString("g")</td>
+					<td>@(booking.Invitations?.Count ?? 0)</td>
+				</tr>
+			}
+		</tbody>
+	</table>
+}
+else
+{
+	<div class="alert alert-info text-center">
+		No bookings found.
+	</div>
+}
