--- a/AdminClient/Views/Shared/_Layout.cshtml
+++ b/AdminClient/Views/Shared/_Layout.cshtml
@@ -26,7 +26,10 @@
 						@* 	<a class="nav-link text-dark" asp-controller="Booking" asp-action="Index">Bookings</a> *@
 						@* </li> *@
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-controller="User" asp-action="Index">User Management</a>
+							<a class="nav-link text-dark" asp-controller="Order" asp-action="Index">Orders</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-controller="User" asp-action="Index">Users</a>
 						</li>
 					</ul>
 				</div>
