--- a/AdminClient/Views/Auth/Login.cshtml
+++ b/AdminClient/Views/Auth/Login.cshtml
@@ -1,28 +1,29 @@
-﻿@model AdminClient.Models.LoginViewModel
+﻿@model AdminClient.Messages.LoginDto
 
 @{
-    ViewData["Title"] = "Login";
+	ViewData["Title"] = "Login";
 }
 
 <h2>Login</h2>
 
 <form asp-action="Login" method="post">
-    <div class="form-group">
-        <label asp-for="Email"></label>
-        <input asp-for="Email" class="form-control" />
-        <span asp-validation-for="Email" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Password"></label>
-        <input asp-for="Password" type="password" class="form-control" />
-        <span asp-validation-for="Password" class="text-danger"></span>
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-</form>
+	<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-<div class="mt-3">
-    <p>
-        Don't have an account?
-        <a asp-controller="Account" asp-action="Register">Register here</a>.
-    </p>
-</div>
+	<div class="form-group">
+		<label asp-for="Email"></label>
+		<input asp-for="Email" class="form-control" />
+		<span asp-validation-for="Email" class="text-danger"></span>
+	</div>
+
+	<div class="form-group">
+		<label asp-for="Password"></label>
+		<input asp-for="Password" class="form-control" type="password" />
+		<span asp-validation-for="Password" class="text-danger"></span>
+	</div>
+
+	<button type="submit" class="btn btn-primary">Login</button>
+
+	<p class="mt-3">
+		<a asp-action="ResetPassword">Forgot your password?</a>
+	</p>
+</form>
