Add new home page; move bookings to separate page

--- a/AdminClient/Views/Shared/_Layout.cshtml
+++ b/AdminClient/Views/Shared/_Layout.cshtml
@@ -20,11 +20,11 @@
 				<div class="collapse navbar-collapse" id="navbarAdmin">
 					<ul class="navbar-nav me-auto mb-2 mb-sm-0">
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Bookings</a>
+							<a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a>
 						</li>
-						@* <li class="nav-item"> *@
-						@* 	<a class="nav-link text-dark" asp-controller="Booking" asp-action="Index">Bookings</a> *@
-						@* </li> *@
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-controller="Booking" asp-action="Index">Bookings</a>
+						</li>
 						<li class="nav-item">
 							<a class="nav-link text-dark" asp-controller="Order" asp-action="Index">Orders</a>
 						</li>
